some mobile style fixes

--- a/index.html
+++ b/index.html
@@ -154,17 +154,7 @@
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit
           excepturi nisi ipsum fugiat praesentium tempore consequatur non, nihil
           culpa recusandae itaque a, ipsam architecto officiis natus, vero
-          sapiente tempora qui! Lorem ipsum dolor sit amet consectetur
-          adipisicing elit. Unde, minus ex ullam neque iure molestias ab
-          aliquam! Ipsa, veritatis cum tempore ab corporis, at sunt earum
-          blanditiis eaque optio praesentium?Lorem ipsum dolor sit amet
-          consectetur, adipisicing elit. Eaque iste dolor esse voluptatum sequi.
-          Vitae aspernatur eos ullam, quos aliquam quaerat! Dolore, molestias
-          rem. Fugiat quasi saepe necessitatibus iste ipsum. Lorem ipsum dolor,
-          sit amet consectetur adipisicing elit. Magni distinctio, aut vero
-          fugit itaque saepe totam inventore sunt, ratione reiciendis molestiae
-          veritatis impedit aspernatur adipisci sed facilis doloribus, sequi
-          eum!
+          sapiente tempora qui!
         </p>
       </div>
     </div>
