--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Personal website of Vasiliy Novozhilov AKA aNOOBis"/> 
-    <meta name="keywords" content=""/>
+    <meta
+      name="description"
+      content="Personal website of Vasiliy Novozhilov AKA aNOOBis"
+    />
+    <meta name="keywords" content="" />
     <title>aNOOBis</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -49,6 +52,17 @@
     </div>
     <section class="main-section">
       <h2 class="section-title">About Me</h2>
+      <p class="section-text">
+        Beginner programmer with a bit of skills who is spending on programming
+        most part of free time.<br />
+        School student with bad marks but with quite a lot of achivevements as I
+        think :) <br />
+        Have pre-professional musical education but plays music quite rare.<br />
+        Have quite bad level of English but trying to improve it every time.<br />
+        Really enjoying speed typing and spend a lot of time improving my typing
+        speed.<br />
+        VSCode - main code editor<br />
+      </p>
       <div class="section-text-wrapper">
         <h3 class="section-small-title">Small projects creator</h3>
         <p class="section-text">
@@ -66,7 +80,7 @@
         </p>
         <h3 class="section-small-title">Other achivevements</h3>
         <p class="section-text">
-          110+ words per minute typing speed on monkeytype.<br />
+          120+ words per minute typing speed on monkeytype.<br />
           Awardee of NTO 2021-2022 in business automatization profile.<br />
           "3 kyu" rank on codewars.
         </p>
@@ -160,11 +174,8 @@
         </p>
       </div>
     </div>
-
   </body>
   <div class="toggle-theme-button"></div>
-  <div class="menu-wrapper">
-  
-</div>
+  <div class="menu-wrapper"></div>
 </html>
 <script src="./js/script.js"></script>
