--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             <div class="project-card-text-wrapper">
               <h2 class="project-card-title">aNOOBus</h2>
               <p class="project-card-description">
-                Multifunctional discord bot.
+                Just simple discord bot.
               </p>
               <i class="fa fa-github fa-2x project-action-icon"></i>
               <i class="fa fa-support fa-2x project-action-icon"></i>
