--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       name="description"
       content="Personal website of Vasiliy Novozhilov AKA aNOOBis"
     />
+    <link rel="icon" href="https://media.discordapp.net/attachments/896041976691032104/1006955412727287948/DefinitelyNoOne_anoobis_neon_art_661ee792-558a-4406-b3da-1f36728ab6f9.png?width=678&height=678">
     <meta name="keywords" content="" />
     <title>aNOOBis</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
