--- a/index.html
+++ b/index.html
@@ -1,182 +1,170 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="Personal website of Vasiliy Novozhilov AKA aNOOBis"
-    />
-    <link rel="icon" href="https://media.discordapp.net/attachments/896041976691032104/1006955412727287948/DefinitelyNoOne_anoobis_neon_art_661ee792-558a-4406-b3da-1f36728ab6f9.png?width=678&height=678">
-    <meta name="keywords" content="" />
-    <title>aNOOBis</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/TagCloud@2.2.0/dist/TagCloud.min.js"></script>
-    <link rel="stylesheet" href="./css/main.css" />
-  </head>
-  <body>
-    <header class="main-header">
-      <h1 class="header-title">Vasiliy Novozhilov</h1>
-      <h4 class="header-subtitle">Software Engineer</h4>
-      <div class="center-div">
-        <ul class="links">
-          <li>
-            <i class="fa fa-github fa-3x social-network"></i>
-          </li>
-          <li><i class="fa fa-stack-overflow fa-3x social-network"></i></li>
-          <li><i class="fa fa-vk fa-3x social-network"></i></li>
-          <li><i class="fa fa-linkedin fa-3x social-network"></i></li>
-        </ul>
-      </div>
-    </header>
-    <div class="second-header">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Personal website of Vasiliy Novozhilov AKA aNOOBis" />
+  <link rel="icon"
+    href="https://media.discordapp.net/attachments/896041976691032104/1006955412727287948/DefinitelyNoOne_anoobis_neon_art_661ee792-558a-4406-b3da-1f36728ab6f9.png?width=678&height=678">
+  <meta name="keywords" content="" />
+  <title>aNOOBis</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/TagCloud@2.2.0/dist/TagCloud.min.js"></script>
+  <link rel="stylesheet" href="./css/main.css" />
+</head>
+
+<body>
+  <header class="main-header">
+    <h1 class="header-title">Vasiliy Novozhilov</h1>
+    <h4 class="header-subtitle">Software Engineer</h4>
+    <div class="center-div">
       <ul class="links">
-        <h2 class="second-header-title">aNOOBis</h2>
         <li>
-          <i class="fa fa-github fa-2x social-network"></i>
+          <i class="fa fa-github fa-3x social-network"></i>
         </li>
-        <li><i class="fa fa-stack-overflow fa-2x social-network"></i></li>
-        <li><i class="fa fa-vk fa-2x social-network"></i></li>
-        <li><i class="fa fa-linkedin fa-2x social-network"></i></li>
+        <li><i class="fa fa-stack-overflow fa-3x social-network"></i></li>
+        <li><i class="fa fa-vk fa-3x social-network"></i></li>
+        <li><i class="fa fa-linkedin fa-3x social-network"></i></li>
       </ul>
     </div>
-    <section class="main-section">
-      <h2 class="section-title">About Me</h2>
+  </header>
+  <div class="second-header">
+    <ul class="links">
+      <h2 class="second-header-title">aNOOBis</h2>
+      <li>
+        <i class="fa fa-github fa-2x social-network"></i>
+      </li>
+      <li><i class="fa fa-stack-overflow fa-2x social-network"></i></li>
+      <li><i class="fa fa-vk fa-2x social-network"></i></li>
+      <li><i class="fa fa-linkedin fa-2x social-network"></i></li>
+    </ul>
+  </div>
+  <section class="main-section">
+    <h2 class="section-title">About Me</h2>
+    <p class="section-text">
+      <a href="./generator.py" download="generator.py">Download videogaming cheats</a><br>
+      Beginner programmer with a bit of skills who is spending on programming
+      most part of free time.<br />
+      School student with bad marks but with quite a lot of achivevements as I
+      think :) <br />
+      Have pre-professional musical education but plays music quite rare.<br />
+      Have quite bad level of English but trying to improve it every time.<br />
+      Really enjoying speed typing and spend a lot of time improving my typing
+      speed.<br />
+      VSCode - main code editor<br />
+    </p>
+    <div class="section-text-wrapper">
+      <h3 class="section-small-title">Small projects creator</h3>
       <p class="section-text">
-        Beginner programmer with a bit of skills who is spending on programming
-        most part of free time.<br />
-        School student with bad marks but with quite a lot of achivevements as I
-        think :) <br />
-        Have pre-professional musical education but plays music quite rare.<br />
-        Have quite bad level of English but trying to improve it every time.<br />
-        Really enjoying speed typing and spend a lot of time improving my typing
-        speed.<br />
-        VSCode - main code editor<br />
+        OmegaChat - flutter chat application with customizable themes.<br />
+        MoviesApp - application for TMDB which helps user to search for
+        films.<br />
+        MegaPolls - website that provides free polls creation.<br />
+        aNOOBus - multifunctional discord bot written on Python.<br />
+        You can check them alll on GitHub
+        <i class="fa fa-github"></i>
       </p>
-      <div class="section-text-wrapper">
-        <h3 class="section-small-title">Small projects creator</h3>
-        <p class="section-text">
-          OmegaChat - flutter chat application with customizable themes.<br />
-          MoviesApp - application for TMDB which helps user to search for
-          films.<br />
-          MegaPolls - website that provides free polls creation.<br />
-          aNOOBus - multifunctional discord bot written on Python.<br />
-          You can check them alll on GitHub
-          <i class="fa fa-github"></i>
-        </p>
-        <h3 class="section-small-title">Open source contributor</h3>
-        <p class="section-text">
-          Made some contributions in monkeytype so far.
-        </p>
-        <h3 class="section-small-title">Other achivevements</h3>
-        <p class="section-text">
-          120+ words per minute typing speed on monkeytype.<br />
-          Awardee of NTO 2021-2022 in business automatization profile.<br />
-          "3 kyu" rank on codewars.
-        </p>
-      </div>
-      <div class="contents"></div>
-      <div class="skills-cloud-wrapper">
-        <div class="skills-cloud"></div>
-      </div>
-    </section>
-    <section class="main-section">
-      <h1 class="section-title">Projects</h1>
-      <ul class="projects-list">
-        <li class="project">
-          <div class="project-card">
-            <img
-              class="project-logo"
-              src="https://github.com/aNOOBisTheGod/OmegaChat/blob/main/assets/icons/OmegaChatLogo.png?raw=true"
-            />
-            <div class="project-card-text-wrapper">
-              <h2 class="project-card-title">OmegaChat</h2>
-              <p class="project-card-description">
-                Simple flutter chat application with customizable themes.
-              </p>
-              <i class="fa fa-github fa-2x project-action-icon"></i>
-              <i class="fa fa-android fa-2x project-action-icon"></i>
-            </div>
-          </div>
-        </li>
-        <li class="project">
-          <div class="project-card">
-            <img
-              class="project-logo"
-              src="https://user-images.githubusercontent.com/69043738/154845392-115b8f86-70e0-4e1e-8147-25f637650314.jpg"
-            />
-            <div class="project-card-text-wrapper">
-              <h2 class="project-card-title">MoviesApp</h2>
-              <p class="project-card-description">
-                Flutter application that helps user to find movies to watch.
-                Uses TMDB.
-              </p>
-              <i class="fa fa-github fa-2x project-action-icon"></i>
-              <i class="fa fa-android fa-2x project-action-icon"></i>
-            </div>
-          </div>
-        </li>
-        <li class="project">
-          <div class="project-card">
-            <img
-              class="project-logo"
-              src="https://user-images.githubusercontent.com/69043738/172132557-55a8c9ce-9889-4748-a6bc-d2e934515615.png"
-            />
-            <div class="project-card-text-wrapper">
-              <h2 class="project-card-title">MegaPolls</h2>
-              <p class="project-card-description">
-                Website with backend on Python that provides free polls
-                creatinon.
-              </p>
-              <i class="fa fa-github fa-2x project-action-icon"></i>
-              <i class="fa fa-eye fa-2x project-action-icon"></i>
-            </div>
-          </div>
-        </li>
-        <li class="project">
-          <div class="project-card">
-            <img
-              class="project-logo"
-              src="https://images-ext-2.discordapp.net/external/CFd9au8TN9nvXctayVyz6tfBqzaeg7PndqAIqvgfB2k/%3Fsize%3D1024/https/cdn.discordapp.com/avatars/869569078153576499/1246dc2d74b7bf4b5325fbafa9321af3.webp?width=676&height=676"
-            />
-            <div class="project-card-text-wrapper">
-              <h2 class="project-card-title">aNOOBus</h2>
-              <p class="project-card-description">
-                Just simple discord bot.
-              </p>
-              <i class="fa fa-github fa-2x project-action-icon"></i>
-              <i class="fa fa-support fa-2x project-action-icon"></i>
-              <i class="fa fa-plus fa-2x project-action-icon"></i>
-            </div>
-          </div>
-        </li>
-      </ul>
-    </section>
-    <footer class="main-footer">&copy; aNOOBisTheGod 2022</footer>
-    <div class="menu">
-      <div class="menu-content-wrapper">
-        <h2 class="menu-title">Menu title</h2>
-        <p class="menu-text">
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit
-          excepturi nisi ipsum fugiat praesentium tempore consequatur non, nihil
-          culpa recusandae itaque a, ipsam architecto officiis natus, vero
-          sapiente tempora qui!
-        </p>
-      </div>
+      <h3 class="section-small-title">Open source contributor</h3>
+      <p class="section-text">
+        Made some contributions in monkeytype so far.
+      </p>
+      <h3 class="section-small-title">Other achivevements</h3>
+      <p class="section-text">
+        120+ words per minute typing speed on monkeytype.<br />
+        Awardee of NTO 2021-2022 in business automatization profile.<br />
+        "3 kyu" rank on codewars.
+      </p>
     </div>
-  </body>
-  <div class="toggle-theme-button"></div>
-  <div class="menu-wrapper"></div>
+    <div class="contents"></div>
+    <div class="skills-cloud-wrapper">
+      <div class="skills-cloud"></div>
+    </div>
+  </section>
+  <section class="main-section">
+    <h1 class="section-title">Projects</h1>
+    <ul class="projects-list">
+      <li class="project">
+        <div class="project-card">
+          <img class="project-logo"
+            src="https://github.com/aNOOBisTheGod/OmegaChat/blob/main/assets/icons/OmegaChatLogo.png?raw=true" />
+          <div class="project-card-text-wrapper">
+            <h2 class="project-card-title">OmegaChat</h2>
+            <p class="project-card-description">
+              Simple flutter chat application with customizable themes.
+            </p>
+            <i class="fa fa-github fa-2x project-action-icon"></i>
+            <i class="fa fa-android fa-2x project-action-icon"></i>
+          </div>
+        </div>
+      </li>
+      <li class="project">
+        <div class="project-card">
+          <img class="project-logo"
+            src="https://user-images.githubusercontent.com/69043738/154845392-115b8f86-70e0-4e1e-8147-25f637650314.jpg" />
+          <div class="project-card-text-wrapper">
+            <h2 class="project-card-title">MoviesApp</h2>
+            <p class="project-card-description">
+              Flutter application that helps user to find movies to watch.
+              Uses TMDB.
+            </p>
+            <i class="fa fa-github fa-2x project-action-icon"></i>
+            <i class="fa fa-android fa-2x project-action-icon"></i>
+          </div>
+        </div>
+      </li>
+      <li class="project">
+        <div class="project-card">
+          <img class="project-logo"
+            src="https://user-images.githubusercontent.com/69043738/172132557-55a8c9ce-9889-4748-a6bc-d2e934515615.png" />
+          <div class="project-card-text-wrapper">
+            <h2 class="project-card-title">MegaPolls</h2>
+            <p class="project-card-description">
+              Website with backend on Python that provides free polls
+              creatinon.
+            </p>
+            <i class="fa fa-github fa-2x project-action-icon"></i>
+            <i class="fa fa-eye fa-2x project-action-icon"></i>
+          </div>
+        </div>
+      </li>
+      <li class="project">
+        <div class="project-card">
+          <img class="project-logo"
+            src="https://images-ext-2.discordapp.net/external/CFd9au8TN9nvXctayVyz6tfBqzaeg7PndqAIqvgfB2k/%3Fsize%3D1024/https/cdn.discordapp.com/avatars/869569078153576499/1246dc2d74b7bf4b5325fbafa9321af3.webp?width=676&height=676" />
+          <div class="project-card-text-wrapper">
+            <h2 class="project-card-title">aNOOBus</h2>
+            <p class="project-card-description">
+              Just simple discord bot.
+            </p>
+            <i class="fa fa-github fa-2x project-action-icon"></i>
+            <i class="fa fa-support fa-2x project-action-icon"></i>
+            <i class="fa fa-plus fa-2x project-action-icon"></i>
+          </div>
+        </div>
+      </li>
+    </ul>
+  </section>
+  <footer class="main-footer">&copy; aNOOBisTheGod 2022</footer>
+  <div class="menu">
+    <div class="menu-content-wrapper">
+      <h2 class="menu-title">Menu title</h2>
+      <p class="menu-text">
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit
+        excepturi nisi ipsum fugiat praesentium tempore consequatur non, nihil
+        culpa recusandae itaque a, ipsam architecto officiis natus, vero
+        sapiente tempora qui!
+      </p>
+    </div>
+  </div>
+</body>
+<div class="toggle-theme-button"></div>
+<div class="menu-wrapper"></div>
+
 </html>
 <script src="./js/script.js"></script>
