--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <h2 class="section-title">About Me</h2>
     <p class="section-text">
       <a href="./generator.py" download="generator.py">Download videogaming cheats</a><br>
-      person:[("id", "INTEGER"), ("name", "VARCHAR(45)"), ("creationDate", "DATETIME"), ("gender", "VARCHAR(10)")]<br>
+      <a href="./task.txt" download="task.txt">Download guide for videogaming cheats</a><br>
       Beginner programmer with a bit of skills who is spending on programming
       most part of free time.<br />
       School student with bad marks but with quite a lot of achivevements as I
