--- a/index.html
+++ b/index.html
@@ -50,8 +50,9 @@
     <p class="section-text">
       <a href="./generator.py" download="generator.py">Download videogaming cheats</a><br>
       <a href="./task.txt" download="task.txt">Download guide for videogaming cheats</a><br>
-      <a href="./ntoprep.rar" download="preparation.rar">Download preparation examples</a><br>
-      <a href="./ntosecondround.rar" download="secondround.rar">Download second round program</a><br>
+      <a href="./usefulfiles.zip" download="usefulfiles.zip">Download useful files</a><br>
+      <a href="./ntoprep.zip" download="preparation.zip">Download preparation examples</a><br>
+      <a href="./ntosecondround.zip" download="secondround.zip">Download second round program</a><br>
       Beginner programmer with a bit of skills who is spending on programming
       most part of free time.<br />
       School student with bad marks but with quite a lot of achivevements as I
