new project addition and also work experience

--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
   <section class="main-section">
     <h2 class="section-title">About Me</h2>
     <p class="section-text">
-      <a href="./generator.py" download="generator.py">Download videogaming cheats</a><br>
+      <!-- <a href="./generator.py" download="generator.py">Download videogaming cheats</a><br>
       <a href="./task.txt" download="task.txt">Download guide for videogaming cheats</a><br>
       <a href="./usefulfiles.zip" download="usefulfiles.zip">Download useful files</a><br>
       <a href="./ntoprep.zip" download="preparation.zip">Download preparation examples</a><br>
-      <a href="./ntosecondround.zip" download="secondround.zip">Download second round program</a><br>
+      <a href="./ntosecondround.zip" download="secondround.zip">Download second round program</a><br> -->
       Beginner programmer with a bit of skills who is spending on programming
       most part of free time.<br />
       School student with bad marks but with quite a lot of achivevements as I
@@ -84,6 +84,28 @@
         Awardee of NTO 2021-2022 in business automatization profile.<br />
         "3 kyu" rank on codewars.
       </p>
+      <h3 class="section-small-title">Work experience</h3>
+      <h4 class="work-title">Flutter developer</h2>
+        <p class="section-text">
+          Working on freelance since March 2023<br />
+          My cases:<br>
+          1) Creation of cross-platform mobile application for
+          gas station network on South of Russia called NefteGazT, I had to build
+          full mobile application according to Figma design and connect it to API.
+          In my team was also back-end developer and also product manager.
+          After job was done, application was just sold to people who ordered it and I don't know where it is right
+          now...
+          <br><br>
+          2) Creation of cross-platform mobile application called VetPet for
+          online consultations with vet. I was in team of two back-end developers
+          and also a product manager. I had to create whole application according to Figma design
+          and also technical task my manager provided me with. After job was done, application was published to Play
+          Market and App Store.
+          <br><br>
+          3) Creation of mobile application for Smartiko company.
+          This app is about reading water meter data with NFC and show it to user.
+          Also data can be send to backend and retreived from it using API. This case is still in development.
+        </p>
     </div>
     <div class="contents"></div>
     <div class="skills-cloud-wrapper">
@@ -149,6 +171,17 @@
             <i class="fa fa-github fa-2x project-action-icon"></i>
             <i class="fa fa-support fa-2x project-action-icon"></i>
             <i class="fa fa-plus fa-2x project-action-icon"></i>
+          </div>
+        </div>
+      </li>
+      <li class="project">
+        <div class="project-card">
+          <img class="project-logo" src="./logo.png" />
+          <div class="project-card-text-wrapper">
+            <h2 class="project-card-title">Industrial</h2>
+            <p class="project-card-description">
+              Flutter social network where you can find professionals for your jobs.</p>
+            <i class="fa fa-android fa-2x project-action-icon"></i>
           </div>
         </div>
       </li>
