oops... quick fix

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
     <div class="center-div">
       <ul class="links">
         <li>
-          <i class="fa fa-github fa-3x social-network" href="https://github.com/aNOOBisTheGod"></i>
+          <i class="fa fa-github fa-3x social-network" onclick="location.href='https://github.com/aNOOBisTheGod';"></i>
         </li>
-        <li><i class="fa fa-stack-overflow fa-3x social-network" href="https://stackoverflow.com/users/15851353/anoobis"></i></li>
-        <li><i class="fa fa-vk fa-3x social-network" href="https://vk.com/anoobisthegod"></i></li>
-        <li><i class="fa fa-linkedin fa-3x social-network" href="https://www.linkedin.com/in/vasiliy-novozhilov-76b375240/"></i></li>
+        <li><i class="fa fa-stack-overflow fa-3x social-network" onclick="location.href='https://stackoverflow.com/users/15851353/anoobis';"></i></li>
+        <li><i class="fa fa-vk fa-3x social-network" onclick="location.href='https://vk.com/anoobisthegod';"></i></li>
+        <li><i class="fa fa-linkedin fa-3x social-network" onclick="location.href='https://www.linkedin.com/in/vasiliy-novozhilov-76b375240/';"></i></li>
       </ul>
     </div>
   </header>
@@ -38,21 +38,21 @@
     <ul class="links">
       <h2 class="second-header-title">aNOOBis</h2>
       <li>
-        <i class="fa fa-github fa-2x social-network" href="https://github.com/aNOOBisTheGod"></i>
+        <i class="fa fa-github fa-2x social-network" onclick="location.href='https://github.com/aNOOBisTheGod';"></i>
       </li>
-      <li><i class="fa fa-stack-overflow fa-2x social-network" href="https://stackoverflow.com/users/15851353/anoobis"></i></li>
-      <li><i class="fa fa-vk fa-2x social-network" href="https://vk.com/anoobisthegod"></i></li>
-      <li><i class="fa fa-linkedin fa-2x social-network" href="https://www.linkedin.com/in/vasiliy-novozhilov-76b375240/"></i></li>
+      <li><i class="fa fa-stack-overflow fa-2x social-network" onclick="location.href='https://stackoverflow.com/users/15851353/anoobis';"></i></li>
+      <li><i class="fa fa-vk fa-2x social-network" onclick="location.href='https://vk.com/anoobisthegod';"></i></li>
+      <li><i class="fa fa-linkedin fa-2x social-network" onclick="location.href='https://www.linkedin.com/in/vasiliy-novozhilov-76b375240/';"></i></li>
     </ul>
   </div>
   <section class="main-section">
     <h2 class="section-title">About Me</h2>
     <p class="section-text">
-      <!-- <a href="./generator.py" download="generator.py">Download videogaming cheats</a><br>
-      <a href="./task.txt" download="task.txt">Download guide for videogaming cheats</a><br>
-      <a href="./usefulfiles.zip" download="usefulfiles.zip">Download useful files</a><br>
-      <a href="./ntoprep.zip" download="preparation.zip">Download preparation examples</a><br>
-      <a href="./ntosecondround.zip" download="secondround.zip">Download second round program</a><br> -->
+      <!-- <a onclick="location.href='./generator.py" download="generator.py">Download videogaming cheats</a><br>
+      <a onclick="location.href='./task.txt" download="task.txt">Download guide for videogaming cheats</a><br>
+      <a onclick="location.href='./usefulfiles.zip" download="usefulfiles.zip">Download useful files</a><br>
+      <a onclick="location.href='./ntoprep.zip" download="preparation.zip">Download preparation examples</a><br>
+      <a onclick="location.href='./ntosecondround.zip" download="secondround.zip">Download second round program</a><br> -->
       Beginner programmer with a bit of skills who is spending on programming
       most part of free time.<br />
       School student with bad marks but with quite a lot of achivevements as I
@@ -124,8 +124,8 @@
             <p class="project-card-description">
               Simple flutter chat application with customizable themes.
             </p>
-            <i class="fa fa-github fa-2x project-action-icon" href="https://github.com/aNOOBisTheGod/OmegaChat/"></i>
-            <i class="fa fa-android fa-2x project-action-icon" href="https://github.com/aNOOBisTheGod/OmegaChat/releases"></i>
+            <i class="fa fa-github fa-2x project-action-icon" onclick="location.href='https://github.com/aNOOBisTheGod/OmegaChat/';"></i>
+            <i class="fa fa-android fa-2x project-action-icon" onclick="location.href='https://github.com/aNOOBisTheGod/OmegaChat/releases';"></i>
           </div>
         </div>
       </li>
@@ -139,8 +139,8 @@
               Flutter application that helps user to find movies to watch.
               Uses TMDB.
             </p>
-            <i class="fa fa-github fa-2x project-action-icon" href="https://github.com/aNOOBisTheGod/MoviesApp"></i>
-            <i class="fa fa-android fa-2x project-action-icon" href="https://github.com/aNOOBisTheGod/MoviesApp/releases"></i>
+            <i class="fa fa-github fa-2x project-action-icon" onclick="location.href='https://github.com/aNOOBisTheGod/MoviesApp';"></i>
+            <i class="fa fa-android fa-2x project-action-icon" onclick="location.href='https://github.com/aNOOBisTheGod/MoviesApp/releases';"></i>
           </div>
         </div>
       </li>
@@ -154,7 +154,7 @@
               Website with backend on Python that provides free polls
               creatinon.
             </p>
-            <i class="fa fa-github fa-2x project-action-icon" href="https://github.com/aNOOBisTheGod/MegaPolls"></i>
+            <i class="fa fa-github fa-2x project-action-icon" onclick="location.href='https://github.com/aNOOBisTheGod/MegaPolls';"></i>
 <!--             <i class="fa fa-eye fa-2x project-action-icon"></i> -->
           </div>
         </div>
@@ -168,7 +168,7 @@
             <p class="project-card-description">
               Just simple discord bot.
             </p>
-            <i class="fa fa-github fa-2x project-action-icon" href="https://github.com/aNOOBisTheGod/upgraded-discord-bot"></i>
+            <i class="fa fa-github fa-2x project-action-icon" onclick="location.href='https://github.com/aNOOBisTheGod/upgraded-discord-bot';"></i>
 <!--             <i class="fa fa-support fa-2x project-action-icon"></i>
             <i class="fa fa-plus fa-2x project-action-icon"></i> -->
           </div>
@@ -181,8 +181,8 @@
             <h2 class="project-card-title">Industrial</h2>
             <p class="project-card-description">
               Flutter social network where you can find professionals for your jobs.</p>
-            <i class="fa fa-github fa-2x project-action-icon" href="https://github.com/aNOOBisTheGod/industrial"></i>
-            <i class="fa fa-android fa-2x project-action-icon" href="https://github.com/aNOOBisTheGod/industrial/releases/"></i>
+            <i class="fa fa-github fa-2x project-action-icon" onclick="location.href='https://github.com/aNOOBisTheGod/industrial';"></i>
+            <i class="fa fa-android fa-2x project-action-icon" onclick="location.href='https://github.com/aNOOBisTheGod/industrial/releases/';"></i>
           </div>
         </div>
       </li>
