CV links addition

--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
       <a onclick="location.href='./usefulfiles.zip" download="usefulfiles.zip">Download useful files</a><br>
       <a onclick="location.href='./ntoprep.zip" download="preparation.zip">Download preparation examples</a><br>
       <a onclick="location.href='./ntosecondround.zip" download="secondround.zip">Download second round program</a><br> -->
+      <a href="https://docs.google.com/document/d/1gxwO7iZ5J-89CKXuEYsCPjtVgDxqx5J4RB65FGPqKLk/edit">Резюме на русском</a>
+      <a href="https://docs.google.com/document/d/1bJQFplxu3HFh9spn5qBQEokwku2Y2NKiiLr1Feltdk8/edit">English CV</a>
       Beginner programmer with a bit of skills who is spending on programming
       most part of free time.<br />
       School student with bad marks but with quite a lot of achivevements as I
